Update and rename 2019-02-15- HTML门.md to 2019-02-15 HTML门.md

--- a/_posts/2019-02-15 HTML门.md
+++ b/_posts/2019-02-15 HTML门.md
@@ -2,15 +2,15 @@
 layout：   post
 title:     从零到资深
 subtitle：  第一个网页到项目集成
-data:       2019-03-25
+date:       2019-03-25
 author:     Mr.nan
-header-img:
+header-img:img/post-bg-ios9-web.jpg
 catalog:true
 tags:
-  - blog
-  
+  - html
+  - css
 ---
 >每日一变
-# 前言
-jq,js
+
+#从入门到放弃
 
